tests/cases/should_fail/literals/multi_code_point_char_literal.hash
// run=fail, stage=parse

k := 'ab';
