tests/cases/should_fail/literals/multi_code_point_char_literal.stderr
error: invalid character literal `ab`, character literals may only contain one codepoint
 --> $DIR/multi_code_point_char_literal.hash:1:6
1 |   k := 'ab';
  |        ^^^^ here
